修改jar包版本，解决jar包冲突

--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 #数据目录
 data_dir=D:\\data\\test
 #结果目录, 若不配置, 同数据目录
-clean_dir=
+result_dir=
 # 是否递归处理文件, 可选值: true, false , true 表示会递归解析 data_dir 下的 excel 文件
 recursive=false
 # 缓冲行数
